--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<canvas id="mycanvas" width="640" height="480"></canvas>
 	</div>
 
+	<script src="utlis.js"></script>
 	<script src="gl-matrix.js"></script>
 	<script src="app.js"></script>
 </body>
