Added FPS counter

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 </head>
 
 <body onload="Init();">
+	<div>fps: <span id="fps"></span></div>
+
 	<div class="container">
 		<canvas id="mycanvas" width="1280" height="960"></canvas>
 	</div>
