--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 		<canvas id="mycanvas" width="1280" height="960"></canvas>
 	</div>
 
+	<script src="model.js"></script>
 	<script src="shader.js"></script>
 	<script src="utlis.js"></script>
 	<script src="gl-matrix.js"></script>
