Additional refactoring. Changed model to tank. Implemented two models one for tank top and one for bot

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 
 <body onload="Init();">
 	<div>fps: <span id="fps"></span></div>
+	<h1>Controls</h1>
+	<ul>
+		<li>Rotate top CW: E</li>
+		<li>Rotate top CCW: Q</li>
+		<li>Rotate bot CW: D</li>
+		<li>Rotate bot CCW: A</li>
+	</ul>
 
 	<div class="container">
 		<canvas id="mycanvas" width="1280" height="960"></canvas>
