--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
 		<li>Rotate top CCW: Q</li>
 		<li>Rotate bot CW: D</li>
 		<li>Rotate bot CCW: A</li>
+		<li>Move tank forwards: W</li>
+		<li>Move tank backwards: S</li>
 	</ul>
 
 	<div class="container">
