--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 		<canvas id="mycanvas" width="1280" height="960"></canvas>
 	</div>
 
+	<script src="tank.js"></script>
 	<script src="light.js"></script>
 	<script src="model.js"></script>
 	<script src="shader.js"></script>
