Added the ability to have multiple light sources

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 			transform: translateX(-50%) translateY(-50%);
 		}
 	</style>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 </head>
 
 <body onload="Init();">
@@ -25,6 +26,8 @@
 		<li>Rotate bot CCW: A</li>
 		<li>Move tank forwards: W</li>
 		<li>Move tank backwards: S</li>
+		<li>Toggle blue light<input type="checkbox" name="blueLight" value="on" checked></li>
+		<li>Toggle red light<input type="checkbox" name="redLight" value="on" checked></li>
 	</ul>
 
 	<div class="container">
