Add reference to camera class.

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="camera.js"></script>
 	<script src="tank.js"></script>
 	<script src="light.js"></script>
 	<script src="model.js"></script>
