Added new matrix maths class

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="gl-matrix.js"></script>
+	<script src="matrix-maths.js"></script>
 	<script src="camera.js"></script>
 	<script src="tank.js"></script>
-	<script src="light.js"></script>
 	<script src="model.js"></script>
+	<script src="light.js"></script>
 	<script src="shader.js"></script>
 	<script src="utlis.js"></script>
-	<script src="gl-matrix.js"></script>
 	<script src="app.js"></script>
 </body>
 
