Project folder restructure

--- a/index.html
+++ b/index.html
@@ -62,15 +62,15 @@
 	</div>
 
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="gl-matrix.js"></script>
-	<script src="matrix-maths.js"></script>
-	<script src="camera.js"></script>
-	<script src="tank.js"></script>
-	<script src="model.js"></script>
-	<script src="light.js"></script>
-	<script src="shader.js"></script>
-	<script src="utlis.js"></script>
-	<script src="app.js"></script>
+	<script src="javascript/gl-matrix.js"></script>
+	<script src="javascript/matrix-maths.js"></script>
+	<script src="javascript/camera.js"></script>
+	<script src="javascript/tank.js"></script>
+	<script src="javascript/model.js"></script>
+	<script src="javascript/light.js"></script>
+	<script src="javascript/shader.js"></script>
+	<script src="javascript/utlis.js"></script>
+	<script src="javascript/app.js"></script>
 </body>
 
 </html>
