Added title and doctype. Removed unused styling

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
+<!DOCTYPE html>
 <html>
 
 <head>
+	<title>Antony Capper Graphics 2018</title>
 	<style>
-		#mycanvas {}
-
 		.container {
 			position: absolute;
 			top: 50%;
