--- a/index.html
+++ b/index.html
@@ -1,83 +1,36 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<title>Antony Capper Graphics 2018</title>
+		<style>
+			.container {
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				-moz-transform: translateX(-50%) translateY(-50%);
+				-webkit-transform: translateX(-50%) translateY(-50%);
+				transform: translateX(-50%) translateY(-50%);
+			}
+		</style>
+	</head>
 
-<head>
-	<title>Antony Capper Graphics 2018</title>
-	<style>
-		.container {
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			-moz-transform: translateX(-50%) translateY(-50%);
-			-webkit-transform: translateX(-50%) translateY(-50%);
-			transform: translateX(-50%) translateY(-50%);
-		}
-	</style>
-</head>
+	<body onload="Init();">
+		<div>fps: <span id="fps"></span></div>
+		<h1>Controls</h1>
 
-<body onload="Init();">
-	<div>fps: <span id="fps"></span></div>
-	<h1>Controls</h1>
-	<h2>Tank</h2>
-	<ul>
-		<li>Rotate top CW: E</li>
-		<li>Rotate top CCW: Q</li>
-		<li>Rotate bot CW: D</li>
-		<li>Rotate bot CCW: A</li>
-		<li>Move tank forwards: W</li>
-		<li>Move tank backwards: S</li>
-		<li>Fire Tank: V</li>
-		<li>Tank Speed: <span id="tankSpeed"></span>
-			<div>
-				<input type="range" min="0.4" max="2" value="0.4" step="0.05" class="slider" id="tankSpeedSlider">
-			</div>
-		</li>
-	</ul>
-	<h2>Camera Position</h2>
-	<ul>
-		<li>Reset: M</li>
-		<li>Move +Z: U</li>
-		<li>Move -Z: J</li>
-		<li>Move -X: H</li>
-		<li>Move +X: K</li>
-		<li>Move Down: L</li>
-		<li>Move Up: O</li>
-		<li>Rotate +Y: I</li>
-		<li>Rotate -Y: Y</li>
-	</ul>
-	<h2>Light</h2>
-	<ul>
-		<li>Move Light +Z: 1</li>
-		<li>Move Light -Z: 2</li>
-		<li>Move Light -X: 3</li>
-		<li>Move Light +X: 4</li>
-		<li>Move Light Down: 5</li>
-		<li>Move Light Up: 6</li>
-	</ul>
-	<h2>Toggles</h2>
-	<ul>
-		<li>Toggle sun light<input type="checkbox" name="sunLight" value="on" checked></li>
-		<li>Toggle blue light<input type="checkbox" name="blueLight" value="on" checked></li>
-		<li>Toggle red light<input type="checkbox" name="redLight" value="on" checked></li>
-		<li>Move sun light<input type="checkbox" name="sunLightMove" value="on"></li>
-		<li>Move red light<input type="checkbox" name="redLightMove" value="on"></li>
-		<li>Move blue light<input type="checkbox" name="blueLightMove" value="on"></li>
-	</ul>
+		<div class="container">
+			<canvas id="mycanvas" width="960" height="720"></canvas>
+		</div>
 
-	<div class="container">
-		<canvas id="mycanvas" width="960" height="720"></canvas>
-	</div>
-
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="javascript/gl-matrix.js"></script>
-	<script src="javascript/matrix-maths.js"></script>
-	<script src="javascript/camera.js"></script>
-	<script src="javascript/tank.js"></script>
-	<script src="javascript/model.js"></script>
-	<script src="javascript/light.js"></script>
-	<script src="javascript/shader.js"></script>
-	<script src="javascript/utlis.js"></script>
-	<script src="javascript/app.js"></script>
-</body>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="javascript/gl-matrix.js"></script>
+		<script src="javascript/matrix-maths.js"></script>
+		<script src="javascript/camera.js"></script>
+		<script src="javascript/tank.js"></script>
+		<script src="javascript/mesh.js"></script>
+		<script src="javascript/light.js"></script>
+		<script src="javascript/shader.js"></script>
+		<script src="javascript/utlis.js"></script>
+		<script src="javascript/app.js"></script>
+	</body>
 </html>
