Added reference to skybox

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 		<script src="javascript/tank.js"></script>
 		<script src="javascript/mesh.js"></script>
 		<script src="javascript/light.js"></script>
+		<script src="javascript/skybox.js"></script>
 		<script src="javascript/shader.js"></script>
 		<script src="javascript/utlis.js"></script>
 		<script src="javascript/app.js"></script>
