--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 		<script src="javascript/matrix-maths.js"></script>
 		<script src="javascript/camera.js"></script>
 		<script src="javascript/tank.js"></script>
+		<script src="javascript/model.js"></script>
 		<script src="javascript/mesh.js"></script>
 		<script src="javascript/light.js"></script>
 		<script src="javascript/skybox.js"></script>
