Added fire particle system

--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
 		<script src="javascript/matrix-maths.js"></script>
 		<script src="javascript/camera.js"></script>
 		<script src="javascript/tank.js"></script>
+		<script src="javascript/point.js"></script>
+		<script src="javascript/fire.js"></script>
 		<script src="javascript/model.js"></script>
 		<script src="javascript/mesh.js"></script>
 		<script src="javascript/light.js"></script>
