--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
 		<script src="javascript/gl-matrix.js"></script>
 		<script src="javascript/matrix-maths.js"></script>
 		<script src="javascript/camera.js"></script>
-		<script src="javascript/tank.js"></script>
 		<script src="javascript/point.js"></script>
 		<script src="javascript/fire.js"></script>
 		<script src="javascript/model.js"></script>
 		<script src="javascript/mesh.js"></script>
 		<script src="javascript/light.js"></script>
 		<script src="javascript/skybox.js"></script>
+		<script src="javascript/trees.js"></script>
 		<script src="javascript/shader.js"></script>
 		<script src="javascript/utlis.js"></script>
 		<script src="javascript/app.js"></script>
