--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			<canvas id="mycanvas" width="960" height="720"></canvas>
 		</div>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/seedrandom/2.3.10/seedrandom.min.js"></script>
 		<script src="javascript/gl-matrix.js"></script>
 		<script src="javascript/matrix-maths.js"></script>
 		<script src="javascript/camera.js"></script>
