--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
 		<div>fps: <span id="fps"></span></div>
 		<h1>Controls</h1>
 
+		<h2>Movement</h2>
+		<ul>
+			<li>Forward: W</li>
+			<li>Backward: S</li>
+			<li>Left: A</li>
+			<li>Right: D</li>
+			<li>Up: Space</li>
+			<li>Down: Shift</li>
+		</ul>
+
+		<h2>Camera Rotation</h2>
+		<ul>
+			<li>Rotate Left: Q</li>
+			<li>Rotate Right: E</li>
+			<li>Rotate Up: R</li>
+			<li>Rotate Down: F</li>
+		</ul>
+
 		<div class="container">
 			<canvas id="mycanvas" width="960" height="720"></canvas>
 		</div>
